<resources>
    <string name="app_name">HiChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="create_user">Create user</string>
    <string name="generate_background_color">generate background color</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="login_email_hint">email</string>
    <string name="create_avatar_image_button">createAvatarImageButton</string>
    <string name="login_login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="add_channel">Add Channel</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="please_log_in_header">Please Log In</string>
    <string name="message_hint">message:</string>
    <string name="send_message_button">send message button</string>
    <string name="user_avatar_image">user avatar image</string>
    <string name="login_nav_main_header">LOGIN</string>
    <string name="user_login_image">user login image</string>
    <string name="create_email_hint">email</string>
    <string name="toast_something_went_wrong_message">Something went wrong, please try again</string>
    <string name="toast_fill_both_email_password_fields">Please fill in both email and password</string>
    <string name="toast_signup_user_empty_fields_passed">Make sure user name, email and password are filled in</string>
    <string name="toast_dialog_message">Both fields should be filled in order to create a new channel</string>
</resources>
