...
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profiledefault" />

    <TextView
        android:id="@+id/userNameNavHeader"
        android:layout_width="wrap_content"
...
